# NekoEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
benchmark/: CMakeLists.txt  bench_aabb.cpp  bench_algo.cpp  bench_aliasing.cpp  bench_allocation.cpp  bench_array_traversal.cpp  bench_box_contact.cpp  bench_branch_pred.cpp  bench_cache_associativity.cpp  bench_circle.cpp  bench_cmath.cpp  bench_custom_allocators.cpp  bench_data_struct.cpp  bench_dynArray.cpp  bench_entity_filter.cpp  bench_map.cpp  bench_matrix.cpp  bench_pathfinding.cpp  bench_prime.cpp  bench_quaternion.cpp  bench_queue.cpp  bench_resource.cpp  bench_soa.cpp  bench_string.cpp  bench_thread.cpp  bench_transformations.cpp  bench_vec.cpp  bench_vector.cpp  bench_vector_nvec.cpp  bench_vtable.cpp
benchmark/include/: random_fill.h
common/assimp_wrapper/: CMakeLists.txt
common/assimp_wrapper/include/: io_system.h
common/assimp_wrapper/src/: io_system.cpp
common/b2_wrapper/: CMakeLists.txt
common/box2d_wrapper/: CMakeLists.txt
common/box2d_wrapper/proto/: phys2d.proto
common/box2d_wrapper/src/: body_manager.cpp  collider_manager.cpp  physics_manager.cpp
common/fmod_wrapper/: CMakeLists.txt
common/fmod_wrapper/include/: fmod_utility.h
common/fmod_wrapper/src/: fmod_utility.cpp
common/ft_wrapper/: CMakeLists.txt
common/ft_wrapper/include/: text_manager.h
common/ft_wrapper/src/: text_manager.cpp
common/gles3_wrapper/: CMakeLists.txt
common/gles3_wrapper/include/: gles3_wrapper_pch.h  io_system.h
common/gles3_wrapper/src/: font.cpp  framebuffer.cpp  graphics.cpp  imgui_impl_opengl3.cpp  io_system.cpp  line.cpp  material.cpp  mesh.cpp  model.cpp  sdl_window.cpp  shader.cpp  shape.cpp  sprite.cpp  texture.cpp
common/lua_wrapper/: CMakeLists.txt
common/lua_wrapper/include/: lua_engine.h
common/lua_wrapper/src/: lua_engine.cpp
common/physfs_wrapper/: CMakeLists.txt
common/physfs_wrapper/data/: package_test.pkg
common/physfs_wrapper/include/: physfs_utility.h
common/physfs_wrapper/src/: physfs.cpp  physfs_utility.cpp
common/physfs_wrapper/test/: test_package.cpp
common/sdl_engine/: CMakeLists.txt
common/sdl_engine/include/: sdl_wrapper_pch.h
common/sdl_engine/src/: imgui_impl_sdl.cpp  sdl_camera.cpp  sdl_engine.cpp  sdl_input.cpp  sdl_window.cpp
common/vulkan_wrapper/: CMakeLists.txt
common/vulkan_wrapper/src/: graphics.cpp  sdl_window.cpp  shader.cpp  vk_imgui.cpp  vk_utility.cpp
core/: CMakeLists.txt
core/include/: core_pch.h
core/include/container/: array_list.h  custom_allocator.h  unique_ptr.h
core/include/custom_container/: map.h  string.h
core/include/engine/: array.h  assert.h  asset.h  component.h  configuration.h  conversion.h  custom_allocator.h  custom_container.h  engine.h  entity.h  filesystem.h  globals.h  intrinsincs.h  jobsystem.h  log.h  prefab.h  resource.h  scene.h  string.h  system.h  transform.h  window.h  worker_system.h
core/include/graphics/: camera.h  color.h  font.h  graphics.h  line.h  shader.h  shape.h  sprite.h  texture.h
core/include/mathematics/: aabb.h  aabb2.h  aabb3.h  angle.h  basic.h  checksum.h  circle.h  circle_ncircle.h  const.h  easing.h  func_table.h  intrinsincs.h  map.h  matrix.h  matrix2.h  matrix3.h  matrix4.h  multiple_vector.h  obb2.h  obb3.h  plane.h  quaternion.h  ray.h  rect.h  transform.h  trigo.h  vec2.h  vec3.h  vec4.h  vector.h  vector_nvec.h
core/include/ntl/: array.h  map.h
core/include/utilities/: action_utility.h  audio_engine.h  custom_queue.h  file_utility.h  map.h  observer.h  physfs_utility.h  service_locator.h  time_utility.h  vector_utility.h
core/include/utils/: file_utility.h  json_utility.h  observer.h
core/proto/: config.proto  graphics.proto  scene.proto  worker.proto
core/src/container/: custom_allocator.cpp
core/src/custom_container/: string.cpp
core/src/engine/: asset.cpp  component.cpp  custom_allocator.cpp  engine.cpp  entity.cpp  filesystem.cpp  jobsystem.cpp  log.cpp  prefab.cpp  resource.cpp  scene.cpp  string.cpp  system.cpp  transform.cpp  worker_system.cpp
core/src/graphics/: camera.cpp  graphics.cpp  obj_loader.cpp  shape.cpp  sprite.cpp  texture.cpp
core/src/mathematics/: aabb2.cpp  aabb3.cpp  basic.cpp  matrix.cpp  matrix4.cpp  obb2.cpp  obb3.cpp  rect.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
core/src/utilities/: custom_queue.cpp  file_utility.cpp  json_utility.cpp  physfs_utility.cpp  physfs_utility.h  time_utility.cpp
core/test/: test_array_list.cpp  test_assets.cpp  test_custom_allocator.cpp  test_determinism.cpp  test_filesystem.cpp  test_mathematics.cpp  test_resource.cpp  test_service_locator.cpp  test_standard_lib.cpp  test_type_size.cpp  test_unique_ptr.cpp  test_units.cpp  test_vector.cpp  test_worker_system.cpp
main/comp_graph/: CMakeLists.txt
main/comp_net/: CMakeLists.txt
main/inputs/: CMakeLists.txt
main/instancing_perf/: CMakeLists.txt
main/logger/: CMakeLists.txt
main/neko_editor3d/: CMakeLists.txt
main/neko_game2d/: CMakeLists.txt
main/udp_socket/: CMakeLists.txt
main/vk_comp_graph/: CMakeLists.txt
main/voxel/: CMakeLists.txt
test/: CMakeLists.txt  test_array.cpp  test_assets.cpp  test_basic.cpp  test_circle.cpp  test_city_behavior_tree.cpp  test_city_behavior_tree_manager.cpp  test_city_builder.cpp  test_city_function_map.cpp  test_custom_allocator.cpp  test_determinism.cpp  test_ecs.cpp  test_filesystem.cpp  test_functable.cpp  test_gb.cpp  test_hashing.cpp  test_input.cpp  test_jobsystem.cpp  test_logger.cpp  test_lua.cpp  test_map.cpp  test_mathematics.cpp  test_matrix.cpp  test_multi.cpp  test_network.cpp  test_oleg.cpp  test_physfs.cpp  test_platformer.cpp  test_quaternion.cpp  test_queue.cpp  test_resource.cpp  test_service_locator.cpp  test_sound.cpp  test_spine.cpp  test_string.cpp  test_transforms.cpp  test_type_size.cpp  test_units.cpp  test_vector.cpp
test/physfs/: test_physfs.cpp
tools/basis_universal/: CMakeLists.txt  basisu_tool.cpp
tools/image_format/: CMakeLists.txt  image_format.cpp
tools/validate_json/: CMakeLists.txt  validate_json.cpp
(+1006 files in other folders)
